--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @import "tailwindcss";
 
 
+html {
+  scroll-behavior: smooth;
+}
 
 
 
-/* Client Testimonials Section Styles */
+/* Client Testimonials Component */
 
 @keyframes scroll {
   0% {
@@ -27,4 +30,21 @@
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+
+
+
+
+@theme{
+  --animate-fadein:fadein 1s ease-out forwards;
+
+  @keyframes fadein {
+    0%{
+      opacity:0;
+    }
+    100%{
+      opacity:100;
+    }
+  }
 }
