--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,20 @@ html {
     }
   }
 }
+
+
+
+/* loader.css */
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 4px solid #3498db;
+  border-top: 4px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
